rework warning animation

--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -117,51 +117,69 @@
                                             <outlet property="windspeedLabel" destination="uOF-b3-Gah" id="ejN-bc-Yol"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AlertCell" id="KNU-hd-cig" userLabel="AlertCell" customClass="AlertCell" customModule="NearbyWeather" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="155.5" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AlertCell" rowHeight="90" id="KNU-hd-cig" userLabel="AlertCell" customClass="AlertCell" customModule="NearbyWeather" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="155.5" width="375" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KNU-hd-cig" id="iGh-Rv-kuf">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mj1-Be-P29" userLabel="backgroundColorView">
-                                                    <rect key="frame" x="15" y="5" width="345" height="34"/>
+                                                    <rect key="frame" x="15" y="15" width="345" height="60"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ExclamationMark" translatesAutoresizingMaskIntoConstraints="NO" id="Tkx-x0-3wf">
-                                                            <rect key="frame" x="15" y="9.5" width="25" height="25"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="LuY-m8-gKz">
+                                                            <rect key="frame" x="15" y="15" width="315" height="30"/>
+                                                            <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ogp-X3-7Tt">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="30"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ExclamationMark" translatesAutoresizingMaskIntoConstraints="NO" id="Tkx-x0-3wf">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="height" constant="25" id="Ci2-Pr-NF1"/>
+                                                                                <constraint firstAttribute="width" constant="25" id="XP7-N9-1j0"/>
+                                                                            </constraints>
+                                                                        </imageView>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstItem="Tkx-x0-3wf" firstAttribute="centerX" secondItem="ogp-X3-7Tt" secondAttribute="centerX" id="At6-RX-nK0"/>
+                                                                        <constraint firstAttribute="width" secondItem="Tkx-x0-3wf" secondAttribute="width" id="D9a-X7-ZCg"/>
+                                                                        <constraint firstItem="Tkx-x0-3wf" firstAttribute="top" secondItem="ogp-X3-7Tt" secondAttribute="top" id="Wp4-5g-a0T"/>
+                                                                    </constraints>
+                                                                </view>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qB-D1-6e7" userLabel="noticeLabel">
+                                                                    <rect key="frame" x="40" y="0.0" width="275" height="30"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="25" id="Ci2-Pr-NF1"/>
-                                                                <constraint firstAttribute="width" constant="25" id="XP7-N9-1j0"/>
+                                                                <constraint firstItem="ogp-X3-7Tt" firstAttribute="height" secondItem="1qB-D1-6e7" secondAttribute="height" id="0as-Cm-ygF"/>
                                                             </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qB-D1-6e7" userLabel="noticeLabel">
-                                                            <rect key="frame" x="55" y="10" width="275" height="14"/>
-                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="1qB-D1-6e7" secondAttribute="trailing" constant="15" id="4K3-4N-4bs"/>
-                                                        <constraint firstItem="Tkx-x0-3wf" firstAttribute="top" secondItem="mj1-Be-P29" secondAttribute="top" constant="10" id="NKL-tf-sco"/>
-                                                        <constraint firstItem="Tkx-x0-3wf" firstAttribute="leading" secondItem="mj1-Be-P29" secondAttribute="leading" constant="15" id="Vbe-lF-U3h"/>
-                                                        <constraint firstItem="1qB-D1-6e7" firstAttribute="leading" secondItem="Tkx-x0-3wf" secondAttribute="trailing" constant="15" id="tcp-KS-wod"/>
-                                                        <constraint firstAttribute="bottom" secondItem="1qB-D1-6e7" secondAttribute="bottom" constant="10" id="uGq-WD-wus"/>
-                                                        <constraint firstItem="1qB-D1-6e7" firstAttribute="top" secondItem="mj1-Be-P29" secondAttribute="top" constant="10" id="yyp-sV-oll"/>
+                                                        <constraint firstItem="LuY-m8-gKz" firstAttribute="top" secondItem="mj1-Be-P29" secondAttribute="top" constant="15" id="2nU-Dx-O52"/>
+                                                        <constraint firstAttribute="trailing" secondItem="LuY-m8-gKz" secondAttribute="trailing" constant="15" id="58a-Ia-qCN"/>
+                                                        <constraint firstAttribute="bottom" secondItem="LuY-m8-gKz" secondAttribute="bottom" constant="15" id="WSo-lx-8I5"/>
+                                                        <constraint firstItem="LuY-m8-gKz" firstAttribute="leading" secondItem="mj1-Be-P29" secondAttribute="leading" constant="15" id="nkp-qW-l94"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="mj1-Be-P29" firstAttribute="leading" secondItem="iGh-Rv-kuf" secondAttribute="leading" constant="15" id="FKW-tr-PM6"/>
-                                                <constraint firstItem="mj1-Be-P29" firstAttribute="top" secondItem="iGh-Rv-kuf" secondAttribute="top" constant="5" id="Oih-ox-Cgd"/>
-                                                <constraint firstAttribute="bottom" secondItem="mj1-Be-P29" secondAttribute="bottom" constant="5" id="dW5-Ti-ikb"/>
+                                                <constraint firstItem="mj1-Be-P29" firstAttribute="top" secondItem="iGh-Rv-kuf" secondAttribute="top" constant="15" id="Oih-ox-Cgd"/>
+                                                <constraint firstAttribute="bottom" secondItem="mj1-Be-P29" secondAttribute="bottom" constant="15" id="dW5-Ti-ikb"/>
                                                 <constraint firstAttribute="trailing" secondItem="mj1-Be-P29" secondAttribute="trailing" constant="15" id="lBr-UM-2LJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="backgroundColorView" destination="mj1-Be-P29" id="yVh-ta-bly"/>
                                             <outlet property="noticeLabel" destination="1qB-D1-6e7" id="5Gs-Ac-e94"/>
+                                            <outlet property="warningImageView" destination="ogp-X3-7Tt" id="FRT-qF-R9B"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
